// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Cell /> should render cell with alive class if isAlive is true 1`] = `
<div>
  <div
    class="cell cell--alive"
  />
</div>
`;

exports[`<Cell /> should render white if isAlive prop is false 1`] = `
<div>
  <div
    class="cell cell--dead"
  />
</div>
`;

exports[`<Cell /> should render white if isAlive prop is false 2`] = `
<div>
  <div
    class="cell cell--dead"
  />
</div>
`;
